--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "db-migrate": "^0.10.0-beta.15",
+    "db-migrate-pg": "^0.1.10",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "pg": "^6.0.3",
     "serve-favicon": "~2.3.0"
   }
 }
